--- a/style.css
+++ b/style.css
@@ -92,3 +92,10 @@ input {
   max-width: 10%;
   border-radius: 0px 10px 10px 0px;
 }
+
+.savebtn {
+  background-color: transparent;
+  border: none;
+  border-radius: 50px;
+  padding: 0px;
+}
